[gd_scene load_steps=12 format=3 uid="uid://cybw4lgjyruj4"]

[ext_resource type="Script" path="res://Scripts/graphicsmenu.gd" id="1_ysym6"]
[ext_resource type="Theme" uid="uid://bi3bwqv4kgpoq" path="res://Themes/BasicButton.tres" id="2_4030b"]
[ext_resource type="Shader" path="res://Scenes/mainmenu.gdshader" id="3_4i6ir"]
[ext_resource type="Theme" uid="uid://dw5g2qeyh1v1e" path="res://Themes/labeltheme.tres" id="4_ah2lx"]
[ext_resource type="FontFile" uid="uid://bgmecac7llk31" path="res://Themes/Poppins-SemiBold.ttf" id="5_6mijd"]
[ext_resource type="AudioStream" uid="uid://b3huo5b0idfiy" path="res://Sound effects/Equatorial Complex.mp3" id="5_n3jnv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6nlqu"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_qvkym"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_05h5i"]
shader = ExtResource("3_4i6ir")
shader_parameter/height = 3.0
shader_parameter/frequency = 20.0
shader_parameter/speed = 3.0

[sub_resource type="Theme" id="Theme_1wegr"]
Label/colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
Label/font_sizes/font_size = 30
Label/fonts/font = ExtResource("5_6mijd")

[sub_resource type="Theme" id="Theme_4v76g"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ysym6")
metadata/_edit_lock_ = true

[node name="TextureRect" type="ColorRect" parent="."]
layout_mode = 0
offset_top = -29.0
offset_right = 1154.0
offset_bottom = 647.0
color = Color(0.509804, 0.639216, 1, 1)
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 106.0
offset_top = 303.0
offset_right = 293.0
offset_bottom = 635.0
theme_override_styles/panel = SubResource("StyleBoxFlat_6nlqu")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = 107.0
offset_top = 357.0
offset_right = 268.0
offset_bottom = 557.0
theme = SubResource("Theme_qvkym")

[node name="Back" type="Button" parent="."]
z_index = 1
layout_mode = 2
offset_left = 91.0
offset_top = 573.0
offset_right = 308.0
offset_bottom = 616.0
theme = ExtResource("2_4030b")
text = "    Back"
alignment = 0

[node name="GameTitle" type="Label" parent="."]
material = SubResource("ShaderMaterial_05h5i")
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -238.0
offset_right = 1063.0
offset_bottom = -98.0
grow_vertical = 2
theme = ExtResource("4_ah2lx")
text = "Orbital Obliteration
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_n3jnv")
autoplay = true

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 1
layout_mode = 0
offset_left = 112.0
offset_top = 561.0
offset_right = 258.0
offset_bottom = 565.0
color = Color(0.501961, 0.501961, 0.501961, 1)

[node name="Resolution" type="OptionButton" parent="."]
z_index = 1
layout_mode = 0
offset_left = 113.0
offset_top = 353.0
offset_right = 286.0
offset_bottom = 387.0
item_count = 3
selected = 1
popup/item_0/text = "1152x648"
popup/item_0/id = 1
popup/item_1/text = "1920x1080"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="ResLabel" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 114.0
offset_top = 306.0
offset_right = 282.0
offset_bottom = 349.0
theme = SubResource("Theme_1wegr")
text = "Resolution:"

[node name="FullscreenLabel" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 112.0
offset_top = 494.0
offset_right = 280.0
offset_bottom = 537.0
theme = SubResource("Theme_1wegr")
text = "Fullscreen:"

[node name="Fullscreen" type="CheckButton" parent="."]
z_index = 1
layout_mode = 0
offset_left = 106.0
offset_top = 532.0
offset_right = 150.0
offset_bottom = 556.0
theme = SubResource("Theme_4v76g")

[node name="QualityLabel" type="Label" parent="."]
z_index = 1
offset_left = 113.0
offset_top = 400.0
offset_right = 281.0
offset_bottom = 443.0
theme = SubResource("Theme_1wegr")
text = "Quality:"

[node name="Quality" type="OptionButton" parent="."]
z_index = 1
offset_left = 113.0
offset_top = 449.0
offset_right = 286.0
offset_bottom = 483.0
item_count = 3
selected = 0
popup/item_0/text = "High"
popup/item_0/id = 0
popup/item_1/text = "Medium"
popup/item_1/id = 1
popup/item_2/text = "Low"
popup/item_2/id = 2

[connection signal="pressed" from="Back" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="item_selected" from="Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="toggled" from="Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="item_selected" from="Quality" to="." method="_on_quality_item_selected"]
